--- a/OmneFictio.Web/wwwroot/css/profile.scss
+++ b/OmneFictio.Web/wwwroot/css/profile.scss
@@ -10,12 +10,143 @@
     gap: 20px;
 }
 
-.profile-details {
+.profile_details-cont {
+    display: flex;
+    flex-shrink: 0;
+}
+
+
+@keyframes loading-dual-ring {
+    0% {
+        transform: rotate(0deg);
+    }
+
+    100% {
+        transform: rotate(360deg);
+    }
+}
+
+@keyframes prskel-loading {
+    0% {
+        background-color: var(--profileskeleton-itemcolor-start);
+    }
+
+    100% {
+        background-color: var(--profileskeleton-itemcolor-end);
+    }
+}
+
+.profile_details-skel {
+    width: 100%;
     display: flex;
     flex-direction: column;
     padding: 0 10px;
     gap: 10px 0;
-    flex-shrink: 0;
+    font-family: "Gudea", Arial, Helvetica, sans-serif;
+
+    .prskel-img_cont, .prskel-name, .prskel-bio > span {
+        animation: prskel-loading 1s linear infinite alternate;
+    }
+
+    .prskel-header {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        gap: 14px 10%;
+        flex-wrap: wrap;
+        padding: 10px 0;
+
+        .prskel-img_cont {
+            padding: 10px 0;
+            height: 100px;
+            width: 100px;
+            border-radius: 10px;
+        }
+
+        .prskel-name {
+            width: 80%;
+            max-width: 140px;
+            height: 20px;
+            border-radius: 30px;
+        }
+    }
+
+    .prskel-bio {
+        display: flex;
+        flex-direction: column;
+        gap: 8px;
+
+        span {
+            height: 14px;
+            border-radius: 30px;
+            width: 100%;
+
+            &:first-child {
+                width: 94%;
+                margin-left: auto;
+            }
+
+            &:last-child {
+                width: 80%;
+            }
+        }
+    }
+
+    .prskel-stats-cont {
+        display: flex;
+        flex-direction: column;
+
+        .prskel-stats_header {
+            font-size: 1.4rem;
+            text-align: center;
+            font-family: "Itim", cursive;
+        }
+
+        .prskel-stats {
+            padding: 6px;
+            display: flex;
+            justify-content: space-around;
+            flex-wrap: wrap;
+
+            .prskel-stat_column {
+                display: flex;
+                flex-direction: column;
+                align-items: center;
+                min-width: 33.3%;
+
+                :first-child {
+                    display: flex;
+                    width: 50px;
+                    height: 50px;
+                    justify-content: center;
+                    align-items: center;
+
+                    &:after {
+                        content: " ";
+                        display: block;
+                        width: 30px;
+                        height: 30px;
+                        border-radius: 50%;
+                        border: 4px solid var(--text-color1);
+                        border-color: var(--profileskeleton-itemcolor-end) transparent var(--profileskeleton-itemcolor-end) transparent;
+                        animation: loading-dual-ring 1.2s linear infinite;
+                    }
+                }
+
+                :last-child {
+                    font-size: 0.9rem;
+                }
+            }
+        }
+    }
+}
+
+.profile_details {
+    width: 100%;
+    display: none; //flex
+    flex-direction: column;
+    padding: 0 10px;
+    gap: 10px 0;
 
     .pr-header {
         display: flex;
@@ -234,19 +365,23 @@
     padding: 20px 0;
     border-top: 1px solid var(--background-color2);
 
-    .post{
+    .post {
         background-color: var(--profile-post-color);
-        .p-info{
+
+        .p-info {
             background-color: var(--profile-post-color);
         }
-        .usercard-onhover{
+
+        .usercard-onhover {
             background-color: var(--profile-post-color) !important;
         }
     }
-    > div {
+
+    >div {
         display: none;
     }
-    > div.active{
+
+    >div.active {
         display: block;
     }
 }
@@ -411,7 +546,7 @@
         flex-direction: row;
         align-items: flex-start;
 
-        .profile-details {
+        .profile_details-cont {
             width: 300px;
 
             .pr-header {
@@ -449,6 +584,15 @@
         }
     }
 
+    .profile-cont .profile_details-skel .prskel-header {
+        flex-direction: column;
+        flex-wrap: unset;
+        .prskel-img_cont{
+            width: 80%;
+            padding-bottom: 70%;
+        }
+    }
+
     .profile-tabs-mobile {
         display: none;
     }
@@ -461,7 +605,7 @@
 // X-Large devices (large desktops, 1200px and up)
 @media (min-width: 1200px) {
     .profile-cont {
-        .profile-details {
+        .profile_details-cont .profile_details {
             .pr-header {
                 .pr-username {
                     font-size: 1rem;
