--- a/OmneFictio.Web/wwwroot/css/theme.scss
+++ b/OmneFictio.Web/wwwroot/css/theme.scss
@@ -53,6 +53,8 @@
     --postskeleton-itemcolor-end: #686868;
     --commentskeleton-itemcolor-start: #434343;
     --commentskeleton-itemcolor-end: #686868;
+    --profileskeleton-itemcolor-start: #434343;
+    --profileskeleton-itemcolor-end: #686868;
 
 
 
@@ -119,6 +121,10 @@
     --postskeleton-itemcolor-end: #b9cdec;
     --commentskeleton-itemcolor-start: #d1d5db;
     --commentskeleton-itemcolor-end: #b9cdec;
+    --profileskeleton-itemcolor-start: #d1d5db;
+    --profileskeleton-itemcolor-end: #b9cdec;
+
+
 
     --button-red: #c76363;
     --button-red-hover: #e05050;
