--- a/OmneFictio.Web/wwwroot/css/profile.css
+++ b/OmneFictio.Web/wwwroot/css/profile.css
@@ -12,6 +12,7 @@
 
 .profile_details-cont {
   display: flex;
+  flex-direction: column;
   flex-shrink: 0;
 }
 
@@ -142,7 +143,7 @@
 
 .profile_details {
   width: 100%;
-  display: none;
+  display: flex;
   flex-direction: column;
   padding: 0 10px;
   gap: 10px 0;
@@ -538,6 +539,9 @@
   }
 }
 @media (max-width: 279px) {
+  .profile_details .prs-column span {
+    font-size: 1.1rem !important;
+  }
   #profile-friends .s-friends .sf-list .sf-usercont .userpic {
     display: none;
   }
