Remastered database + half way fixing the apps

--- a/OmneFictio.Web/Views/Home/Publish.cshtml
+++ b/OmneFictio.Web/Views/Home/Publish.cshtml
@@ -95,9 +95,9 @@
         <div class="wf-post_body">
             <div class="wf-post_primary">
                 <span>Title</span>
-                <input class="wf-title" type="text" name="Title" placeholder="Title">
+                <input class="wf-title" type="text" name="title" placeholder="Title">
                 <span>Description</span>
-                <textarea class="wf-description" name="PostDescription" placeholder="Description"></textarea>
+                <textarea class="wf-description" name="postDescription" placeholder="Description"></textarea>
                 <span>Cover image (optional)</span>
                 <div class="coverupload_wrap">
                     <input type="file" id="uploadCoverImg">
@@ -106,7 +106,7 @@
             <div class="wf-post_details">
                 <div class="wf-language">
                     <span>Language:</span>
-                    <select name="LanguageId">
+                    <select name="languageId">
                         <option value="0">Language</option>
                         <option value="1">English</option>
                         <option value="2">Turkish</option>
@@ -117,7 +117,7 @@
                 </div>
                 <div class="wf-type">
                     <span>Type:</span>
-                    <select name="PostTypeId" id="wf-posttype">
+                    <select name="postTypeId" id="wf-posttype">
                         <option value="0">Type</option>
                         <option value="1">Story</option>
                         <option value="2">Scenario</option>
@@ -127,7 +127,7 @@
                 </div>
                 <div class="wf-ratedas">
                     <span>Rated as:</span>
-                    <select name="RatedAsId">
+                    <select name="ratedAsId">
                         <option value="0">Rated as</option>
                         <option value="1">E - Everyone</option>
                         <option value="2">T - 13+</option>
