--- a/OmneFictio.Web/Views/Home/Register.cshtml
+++ b/OmneFictio.Web/Views/Home/Register.cshtml
@@ -13,9 +13,9 @@
             <span>Register</span>
         </div>
         <div class="rm-primary">
-            <input type="text" placeholder="Username" name="Username" class="rm-textbox" id="rm-username">
-            <input type="text" placeholder="Email" name="Email" class="rm-textbox" id="rm-email">
-            <input type="password" placeholder="Password" name="Pw" class="rm-textbox" id="rm-pw">
+            <input type="text" placeholder="Username" name="username" class="rm-textbox" id="rm-username">
+            <input type="text" placeholder="Email" name="email" class="rm-textbox" id="rm-email">
+            <input type="password" placeholder="Password" name="pw" class="rm-textbox" id="rm-pw">
             <input type="password" placeholder="Confirm Password" class="rm-textbox" id="rm-pwconfirm">
             <input type="submit" value="Register" class="rm-submit">
             <span class="rm-message" id="registerform-message"></span>
@@ -29,9 +29,9 @@
             <span>Extras</span>
         </div>
         <div class="re-primary">
-            <label><span>Allow adult content (18+)</span><input type="checkbox" name="AllowAdultContent" value="true" checked></label>
+            <label><span>Allow adult content (18+)</span><input type="checkbox" name="allowAdultContent" value="true" checked></label>
             <span>Preferred language:</span>
-            <select name="PrefLanguageId">
+            <select name="prefLanguageId">
                 <option value="0">Language</option>
                 <option value="1">Turkish</option>
                 <option value="2">English</option>
