--- a/OmneFictio.Web/Views/Shared/_Layout.cshtml
+++ b/OmneFictio.Web/Views/Shared/_Layout.cshtml
@@ -344,8 +344,8 @@
             </div>
         </div>
         <div class="lm-primary">
-            <input type="text" placeholder="Username/Email" name="Username" class="lm-textbox">
-            <input type="password" placeholder="Password" name="Pw" class="lm-textbox">
+            <input type="text" placeholder="Username/Email" name="username" class="lm-textbox">
+            <input type="password" placeholder="Password" name="pw" class="lm-textbox">
             <input type="submit" value="Login" class="lm-submit">
             <span class="lm-message" id="loginmodal-message"></span>
             <span class="lm-success" id="loginmodal-success"></span>
@@ -357,7 +357,7 @@
             <span>I forgot <a href="#">something</a></span>
         </div>
         <div class="lm-rememberme">
-            <label><span>Remember me</span><input type="checkbox" name="RememberMe" value="true" checked></label>
+            <label><span>Remember me</span><input type="checkbox" name="rememberMe" value="true" checked></label>
             <a asp-controller="Home" asp-action="Register">Sign Up</a>
         </div>
     </form>
