--- a/OmneFictio.Web/wwwroot/css/profile.scss
+++ b/OmneFictio.Web/wwwroot/css/profile.scss
@@ -172,17 +172,17 @@
             display: flex;
             flex-direction: column;
             justify-content: center;
-            gap: 6px;
+            gap: 8px;
 
             .pr-username {
-                font-family: 'Itim', cursive;
-                font-size: 1.2rem;
+                font-family: Arial, Helvetica, sans-serif;
+                font-size: 0.8rem;
                 text-align: center;
             }
 
             .pr-displayname {
                 font-family: 'Itim', cursive;
-                font-size: 1.4rem;
+                font-size: 1.1rem;
                 text-align: center;
             }
         }
@@ -221,8 +221,12 @@
             background-color: var(--button-red);
         }
 
-        .pr-moderator {
+        .pr-officer {
             background-color: var(--button-blue);
+        }
+
+        .pr-developer {
+            background-color: var(--button-green);
         }
     }
 
@@ -247,10 +251,13 @@
     }
 
     .pr-gold {
-        text-align: center;
-
+        display: flex;
+        justify-content: center;
+        gap: 8px;
         i {
             color: #c5c93d;
+            display: flex;
+            align-items: center;
         }
     }
 
@@ -565,11 +572,11 @@
                     gap: unset;
 
                     .pr-username {
-                        font-size: 0.8rem;
+                        font-size: 0.9rem;
                     }
-
+    
                     .pr-displayname {
-                        font-size: 1rem;
+                        font-size: 1.3rem;
                     }
                 }
             }
@@ -607,16 +614,6 @@
 @media (min-width: 1200px) {
     .profile-cont {
         .profile_details-cont .profile_details {
-            .pr-header {
-                .pr-username {
-                    font-size: 1rem;
-                }
-
-                .pr-displayname {
-                    font-size: 1.2rem;
-                }
-            }
-
             .pr-bio {
                 font-size: 0.9rem;
             }
