button for saving a post

--- a/OmneFictio.Web/Views/Home/Post.cshtml
+++ b/OmneFictio.Web/Views/Home/Post.cshtml
@@ -67,7 +67,7 @@
 
         <div class="post-more">
             <div class="p-actions">
-                <button type="button" class="pd-saved">Save</button>
+                <button type="button" id="postSaveBtn">Save</button>
                 <button type="button">Share</button>
                 <button type="button">Report</button>
             </div>
