--- a/OmneFictio.Web/wwwroot/css/postitem.css
+++ b/OmneFictio.Web/wwwroot/css/postitem.css
@@ -110,13 +110,16 @@
   display: flex;
   flex-direction: row;
   justify-content: space-between;
-  align-items: flex-start;
+  align-items: center;
+  flex-wrap: wrap;
+  padding: 10px 0;
 }
 .post-body .p-header .p-title {
-  padding: 10px;
+  padding: 0 10px;
   font-family: "Josefin Sans", sans-serif;
   font-weight: 600;
-  width: 100%;
+  flex-grow: 1;
+  min-width: 160px;
 }
 .post-body .p-header .p-title a {
   display: inline-block;
@@ -137,10 +140,12 @@
   height: 100%;
   padding: 0 10px;
   font-size: 1.7rem;
-  gap: 10px;
+  gap: 20px;
+  margin-left: auto;
 }
 .post-body .p-header .p-menu i {
   cursor: pointer;
+  display: flex;
 }
 .post-body .p-header .p-menu .p-infoicon {
   font-size: 1.4rem;
