--- a/OmneFictio.Web/wwwroot/css/postitem.scss
+++ b/OmneFictio.Web/wwwroot/css/postitem.scss
@@ -116,13 +116,16 @@
         display: flex;
         flex-direction: row;
         justify-content: space-between;
-        align-items: flex-start;
+        align-items: center;
+        flex-wrap: wrap;
+        padding: 10px 0;
 
         .p-title {
-            padding: 10px;
+            padding: 0 10px;
             font-family: 'Josefin Sans', sans-serif;
             font-weight: 600;
-            width: 100%;
+            flex-grow: 1;
+            min-width: 160px;
 
             a {
                 display: inline-block;
@@ -147,10 +150,12 @@
             height: 100%;
             padding: 0 10px;
             font-size: 1.7rem;
-            gap: 10px;
+            gap: 20px;
+            margin-left: auto;
 
             i {
                 cursor: pointer;
+                display: flex;
             }
 
             .p-infoicon {
